app/src/main/docker/envoy.yaml
admin:
  address:
    socket_address: {address: 0.0.0.0, port_value: 9000}

static_resources:
  listeners:
    - name: listener1
      address:
        socket_address: {address: 0.0.0.0, port_value: 9090}
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: grpc_json
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                            grpc: {} # Return 404 instead of 415 if no match is found
                          route: {cluster: grpc, timeout: 60s}
                http_filters:
                  - name: envoy.filters.http.grpc_json_transcoder
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                      proto_descriptor: "/app/descriptor.binpb"
                      # TODO Leaving this hardcoded for now, as we only have a few service at the moment
                      # In order to dynamically determine the list of services, we can use the following command
                      # buf build -o -#format=json | jq -r '.file | map(select(.name | startswith("getstrm"))) | map(select(.service > 0) | (.package + "." + .service[].name))[] | ("- " + .)'
                      # With the `copyDocker` command in the gradle build file, this could be expanded as a variable in this file
                      services:
                      - "getstrm.pace.api.data_catalogs.v1alpha.DataCatalogsService"
                      - "getstrm.pace.api.data_policies.v1alpha.DataPoliciesService"
                      - "getstrm.pace.api.processing_platforms.v1alpha.ProcessingPlatformsService"
                      - "getstrm.pace.api.global_transforms.v1alpha.GlobalTransformsService"
                      auto_mapping: false
                      convert_grpc_status: true
                      request_validation_options:
                        reject_unknown_method: true
                      print_options:
                        add_whitespace: false
                        always_print_primitive_fields: true
                        always_print_enums_as_ints: false
                        preserve_proto_field_names: false
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: grpc
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 0.0.0.0
                      port_value: 50051
